--- a/GmailReader-mvn/pom.xml
+++ b/GmailReader-mvn/pom.xml
@@ -61,6 +61,13 @@
             <version>4.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
